<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Uno</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_TextView">Willkommen bei UNO</string>
    <string name="createServer_btn">Spiel erstellen</string>
    <string name="joinServer_btn">Spiel beitreten</string>
    <string name="settings_btn">Einstellungen</string>
    <string name="quitGame_btn">Spiel beenden</string>
    <string name="joinServer_welcomeTextview">Hier kannst du einem Spiel betireten</string>
    <string name="JoinServer_prevbtn">Zurück</string>
    <string name="login_Pass">Passwort:</string>
    <string name="login_Register">Registrieren</string>
    <string name="login_Btn">Login</string>
    <string name="register_Btn">Registrieren</string>
    <string name="pass_confirm">Passwort wiederholen:</string>
    <string name="login_username">Username:</string>
    <string name="createServer_serverName">Servername:</string>
    <string name="createServer_startServer">Server starten</string>
    <string name="about">Über</string>
    <string name="friendList_btn">Freundesliste</string>
    <string name="friendListRefreshbtn">Aktualisieren</string>
    <string name="friendListAddFriend">Freund hinzufügen</string>
    <string name="newGameHostHeadline">Dein Spiel</string>
    <string name="newGameHostListView">Mitspieler in deinem Spiel:</string>
    <string name="newGameHostStartGamebtn">Spiel starten!</string>
    <string name="joinServerHeadLine">Spiel beitreten</string>
    <string name="joinServerListHeader">Verfügbare Spiele:</string>
    <string name="newGamePlayerHeadline">Spiel</string>
    <string name="newGamePlayerListTextView">Mitspieler in diesem Spiel:</string>
    <string name="highscore_btn">Highscore</string>
    <string name="highscoreHeadline">HighScore</string>
    

</resources>
