<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.uno.android.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/welcome_TextView" />

    <Button
        android:id="@+id/createServerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createServer_btn" />

    <Button
        android:id="@+id/joinServerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joinServer_btn" />

    <Button
        android:id="@+id/settingsbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn" />

    <Button
        android:id="@+id/quitbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quitGame_btn" />

</LinearLayout>
