<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/joinServerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/joinServerHeadLine"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/joinServerListHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joinServerListHeader"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/joinServerListView"
        android:choiceMode="singleChoice"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="258dp" >
    </ListView>

    <Button
        android:id="@+id/JoinServerjoinbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/joinServer_btn" />

</LinearLayout>