<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/newServerHostHeadLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/newGameHostHeadline"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/newServerHostListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newServerRdybtn"
        android:layout_below="@+id/newServerHostHeadLine"
        android:layout_marginTop="28dp"
        android:layout_toLeftOf="@+id/newServerHostStartGamebtn" >

    </ListView>

    <Button
        android:id="@+id/newServerHostStartGamebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newServerRdybtn"
        android:layout_alignBottom="@+id/newServerRdybtn"
        android:layout_alignParentRight="true"
        android:text="@string/newGameHostStartGamebtn" />

    <ToggleButton
        android:id="@+id/newServerRdybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="134dp"
        android:text="Button"
        android:textOff="Bereit!"
        android:textOn="Bereit!" />

    <TextView
        android:id="@+id/newGameHostListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newServerHostHeadLine"
        android:layout_marginTop="14dp"
        android:text="@string/newGameHostListView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
